@@ -1,0 +1,19 @@
+/* -------------------------------------------------------------- 
+   
+   ie.css
+   
+   Contains every hack for IE6, so that our core files stay
+   sweet and nimble.
+   
+-------------------------------------------------------------- */
+
+/* This fixes the problem where IE6 adds an extra 3px margin to
+   two columns that are floated up against each other. */
+
+* html .column { overflow-x: hidden; } /* IE6 fix */
+
+.pull-1, .pull-2, .pull-3, .pull-4,
+.push-1, .push-2, .push-3, .push-4 {
+  overflow-x: visible; /* Overrides previous IE6 fix (needs improvement). */
+}
+
