@@ -1,6 +1,6 @@
 /* -------------------------------------------------------------- 
    
-   Typography.css
+   typography.css
    * Website:   http://code.google.com/p/blueprintcss/
   
    Based on work by:
